# StagyBee

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  INSTALL_DOCKER.md  README.md  TRANSLATE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  login_gen.py  manage.py  podman-compose.yml  requirements-dev.txt  requirements.txt  shutdown.sh  shutdown_interface.sh  values.env.example
app/: .dockerignore  .env.docker.dev.example  .env.docker.example  .env.example  .env.podman.example  Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh  index.js  index.ts  manage.py  mix-manifest.json  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  shutdown.sh  shutdown_interface.sh  style.scss  tailwind.config.js  tsconfig.json  webpack.config.js  webpack.mix.js
app/StagyBee/: api.py  asgi.py  consumers.py  regex.json  routing.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
app/StagyBee/settings/: common.py  dev.py  prod.py
app/audit/: apps.py  models.py  tests.py  urls.py  views.py
app/audit/migrations/: 0001_initial.py  0002_auto_20200303_1940.py  0003_auto_20200406_1559.py  0004_auto_20200406_1600.py  0005_alter_audit_options.py  0006_alter_audit_id.py  0007_alter_audit_congregation_alter_audit_user.py  0008_alter_audit_message.py
app/bundle/: bundle.js  bundle.ts  bundle_dev.js  main.css  package-lock.json  package.json  vite.config.js
app/console/: admin.py  apps.py  consumers.py  converters.py  forms.py  get_times.py  models.py  routing.py  tests.py  urls.py  views.py
app/console/migrations/: 0001_initial.py  0002_audit_congregation.py  0003_auto_20200218_1310.py  0004_auto_20200218_1445.py  0005_auto_20200218_1554.py  0006_auto_20200218_1601.py  0007_auto_20200218_1601.py  0008_auto_20200220_2356.py  0009_auto_20200221_0002.py  0010_delete_audit.py  0011_delete_timeentry.py  0012_userpreferences.py  0013_userpreferences_language.py  0014_auto_20210209_1141.py  0015_knownclient.py  0016_knownclient_alias.py  0017_alter_knownclient_alias.py  0018_auto_20210422_1543.py  0019_auto_20210422_1545.py  0020_knownclient_cert_file.py  (+9 more)
app/notification/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/picker/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
app/receiver/: tests.py  urls.py  views.py
app/requirements/: common.txt  dev.txt  prod.txt
app/schemes/: dark.less  light.less
app/scripts/: entrypoint.prod.sh  entrypoint.sh
app/stage/: apps.py  consumers.py  routing.py  timeout.py  urls.py  views.py
app/stagy_bee/: consumers.py  settings.py  urls.py  views.py
app/stopwatch/: apps.py  consumers.py  forms.py  models.py  routing.py  timer.py  timer_redis.py  urls.py  views.py
app/style/: dark.less  light.less  main.css  style.scss
app/templates/: 400.html  403.html  404.html  500.html  base.html  base_error.html  base_header.html  base_header_error.html  base_header_rtl.html
console/: forms.py  (+4 more)
(+364 files in other folders)
