[project]
name = "StagyBee"
version = "2.0.0-alpha01"
description = "StagyBee Auto login for JWConf Stage User"
requires-python = ">=3.14"
dependencies = [
    "aiohttp==3.11.13",
    "asgiref==3.8.1",
    "beautifulsoup4==4.13.3",
    "channels-redis[cryptography]==4.2.1",
    "channels[daphne]==4.2.0",
    "django==5.1.7",
    "django-environ==0.12.0",
    "django-guardian==2.4.0",
    "django-ninja==1.3.0",
    "django-qr-code==4.1.0",
    "django-widget-tweaks==1.5.0",
    "psycopg>=3.2.10",
    "python-dateutil==2.9.0.post0",
    "redis==5.2.1",
    "tenacity==9.0.0",
    "wheel==0.45.1",
]

[dependency-groups]
dev = [
    "aiohttp==3.11.13",
    "asgiref==3.8.1",
    "beautifulsoup4==4.13.3",
    "channels-redis[cryptography]==4.2.1",
    "channels[daphne]==4.2.0",
    "django==5.1.7",
    "django-debug-toolbar>=6.0.0",
    "django-environ==0.12.0",
    "django-guardian==2.4.0",
    "django-ninja==1.3.0",
    "django-qr-code==4.1.0",
    "django-widget-tweaks==1.5.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "python-dateutil==2.9.0.post0",
    "redis==5.2.1",
    "tenacity==9.0.0",
    "wheel==0.45.1",
]
