[project]
name = "StagyBee"
version = "2.0.0-alpha01"
description = "StagyBee Auto login for JWConf Stage User"
requires-python = ">=3.14"
dependencies = [
    "aiohttp==3.13.0",
    "asgiref==3.10.0",
    "beautifulsoup4==4.14.2",
    "channels-redis[cryptography]==4.3.0",
    "channels[daphne]==4.3.1",
    "django==5.2.7",
    "django-environ==0.12.0",
    "django-guardian==3.2.0",
    "django-ninja==1.4.3",
    "django-qr-code==4.2.0",
    "django-widget-tweaks==1.5.0",
    "psycopg>=3.2.10",
    "python-dateutil==2.9.0.post0",
    "redis==6.4.0",
    "tenacity==9.1.2",
    "wheel==0.45.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "python-dateutil==2.9.0.post0",
]
